service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-server
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
